fix(follow): texte d'erreur email & centrage alignement icône erreur/valid [DS-2261] (#186)

--- a/src/component/form/style/_module.scss
+++ b/src/component/form/style/_module.scss
@@ -46,7 +46,7 @@
  * Style du texte d'erreur
  */
 #{ns(error-text)} {
-  @include display-flex(row, baseline);
+  @include display-flex(row, center);
   @include text-style(xs);
   @include margin-top(4v);
   @include margin-bottom(0);
@@ -61,7 +61,7 @@
  * Style du texte de l'état validé
  */
 #{ns(valid-text)} {
-  @include display-flex(row, baseline);
+  @include display-flex(row, center);
   @include text-style(xs);
   @include margin-top(4v);
   @include margin-bottom(0);
